@@ -14,12 +14,19 @@
  
 #ifndef LMCURVE_H
 #define LMCURVE_H
+#undef __BEGIN_DECLS
+#undef __END_DECLS
+#ifdef __cplusplus
+# define __BEGIN_DECLS extern "C" {
+# define __END_DECLS }
+#else
+# define __BEGIN_DECLS /* empty */
+# define __END_DECLS /* empty */
+#endif
 
 #include<lmstruct.h>
 
-#ifdef __cplusplus
-extern "C" {
-#endif
+__BEGIN_DECLS
 
 void lmcurve( int n_par, double *par, int m_dat,
               const double *t, const double *y,
@@ -27,8 +34,5 @@ void lmcurve( int n_par, double *par, int m_dat,
               const lm_control_struct *control,
               lm_status_struct *status );
 
-#ifdef __cplusplus
-}
-#endif
-
+__END_DECLS
 #endif /* LMCURVE_H */
